--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
 
  
-<link rel="stylesheet" href="styles.f6f6f19645c9b5a46c82.css"></head>
+</head>
 
 <body class="fix-header card-no-border fix-sidebar">
 
@@ -71,6 +71,6 @@
  
   
  
-<script src="runtime.50dbfe30e278b816516c.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="main.49674ce45b3190a04113.js" defer></script></body>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 
 </html>
