--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
 
  
-</head>
+<link rel="stylesheet" href="styles.4489c4805442a4b8aeeb.css"></head>
 
 <body class="fix-header card-no-border fix-sidebar">
 
@@ -71,6 +71,6 @@
  
   
  
-<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
+<script src="runtime.9bd47de72848226f8907.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="main.d460dd35d2a38a43c02f.js" defer></script></body>
 
 </html>
